fix:检查和处理findbugs的全部建议